gts-macros/tests/compile_fail/base_parent_no_generic.stderr
error[E0107]: struct takes 0 generic arguments but 1 generic argument was supplied
  --> tests/compile_fail/base_parent_no_generic.rs:23:12
   |
23 |       base = LeafTypeV1,
   |  ____________^^^^^^^^^^-
   | |            |
   | |            expected 0 generic arguments
24 | |     schema_id = "gts.x.app.entities.leaf.v1~x.app.entities.child.v1~",
25 | |     description = "Child trying to extend leaf type (invalid)",
26 | |     properties = "extra_field"
27 | | )]
   | |__- help: remove the unnecessary generics
   |
note: struct defined here, with 0 generic parameters
  --> tests/compile_fail/base_parent_no_generic.rs:15:12
   |
15 | pub struct LeafTypeV1 {
   |            ^^^^^^^^^^
